# hashcode

./: .gitignore  Pipfile  README.md  main.py
books/: problem.py
books/solvers/: basic.py  bookworm.py  scan_choice.py  scanning_choices.py  simulated_annealing.py
books/test/: test_problem.py
books2020/solvers/: behemoth.py  bookworm.py  scan_choice.py  simulated_annealing.py
books2020/test/: test_bookworm.py
pizza/: problem.py
pizza/solvers/: basic.py  dynamic.py  optimizepizza.py  slightly_smarter.py
pizza2020/: problem.py
pizza2020/solvers/: optimizepizza.py
pizza2021/: distance_matrix.py  problem.py
pizza2021/solvers/: example.py  shrubena_solver.py
teamwork2022/: problem.py
teamwork2022/solvers/: example.py  mentoring.py  refined_example.py
traffic2021/: integer_minimization.py  problem.py
traffic2021/rust/fast/: Cargo.toml
traffic2021/rust/fast/src/: lib.rs
traffic2021/solvers/: integer_minimization.py  path_analysis.py  simple.py
