[package]
name = "fast"
version = "0.1.0"
authors = ["reb <reboumans@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fast"
crate-type=["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]